Fix the hardcoded include for lua backend

Currently Cantor has a hardcoded include to get lua.hpp library.
This patch fix the search to include different versions of lua
library. The hardcoded solution is no more necessary.

BUG: 354772
Differential Revision: https://phabricator.kde.org/D4588