src/backends/lua/luaexpression.cpp
@@ -26,7 +26,7 @@
 #include "imageresult.h"
 #include "helpresult.h"
 
-#include <luajit-2.0/lua.hpp> // need the luajit-2.0 prefix to avoid conflicts with Lua 5.2
+#include <lua.hpp>
 
 #include <QDebug>
 #include <QString>
